Adicionando botões para Voltar e Avançar; Melhorando o hover dos links para os exemplos

--- a/portifolio/portifolio/index.html
+++ b/portifolio/portifolio/index.html
@@ -43,7 +43,7 @@
             <section class="resume-section" id="home">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Vittorio Perotto
+                        <span class="text-primary">Vittorio Perotto</span>
                     </h1>
                     <div class="subheading mb-5">
                         Experiência Criativa - Criando Soluções Computacionais
@@ -65,30 +65,51 @@
             <!-- Módulo 1-->
             <section class="resume-section" id="modulo_um">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Módulo 1</h2>
-                    <div class="subheading mb-3">Exemplos realizados nesse módulo:</div>
+                    <h2 class="mb-3">Módulo 1</h2>
+                    <div class="subheading mb-5">Exemplos realizados nesse módulo:</div>
                     <ul class="fa-ul mb-0">
                         <li class="link-example a-link-example">
-                            <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <p><a class="a-link-example a-link" href="#um_exemplo00">Exemplo 00</a></p>
+                            <a class="a-link-example a-link" href="#um_exemplo00">
+                                <span class="fa-li"><i class="fas fa-code"></i></span>
+                                <p>Exemplo 00</p>
+                            </a>
                         </li>
                         <li class="link-example a-link-example">
-                            <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <p><a class="a-link-example a-link" href="#um_exemplo01">Exemplo 01</a></p>
+                            <a class="a-link-example a-link" href="#um_exemplo01">
+                                <span class="fa-li"><i class="fas fa-code"></i></span>
+                                <p>Exemplo 01</p>
+                            </a>
                         </li>
                         <li class="link-example a-link-example">
-                            <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <p><a class="a-link-example a-link" href="#um_exemplo02">Exemplo 02</a></p>
+                            <a class="a-link-example a-link" href="#um_exemplo02">
+                                <span class="fa-li"><i class="fas fa-code"></i></span>
+                                <p>Exemplo 02</p>
+                            </a>
                         </li>
                         <li class="link-example a-link-example">
-                            <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <p><a class="a-link-example a-link" href="#um_exemplo03">Exemplo 03</a></p>
+                            <a class="a-link-example a-link" href="#um_exemplo03">
+                                <span class="fa-li"><i class="fas fa-code"></i></span>
+                                <p>Exemplo 03</p>
+                            </a>
                         </li>
                         <li class="link-example a-link-example">
-                            <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <p><a class="a-link-example a-link" href="#um_exemplo04">Exemplo 04</a></p>
+                            <a class="a-link-example a-link" href="#um_exemplo04">
+                                <span class="fa-li"><i class="fas fa-code"></i></span>
+                                <p>Exemplo 04</p>
+                            </a>
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#home">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -96,7 +117,7 @@
             <!-- M1 - Exemplo 00 -->
             <section class="resume-section" id="um_exemplo00">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 00</h2>
+                    <h2 class="mb-0">Exemplo 00</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -131,6 +152,23 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#modulo_um">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo01">
+                                    Próximo
+                                    <span class="fa-li"><i class="fas fa-angle-down"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -138,7 +176,7 @@
             <!-- M1 - Exemplo 01 -->
             <section class="resume-section" id="um_exemplo01">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 01</h2>
+                    <h2 class="mb-0">Exemplo 01</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -173,6 +211,23 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo00">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo02">
+                                    Próximo
+                                    <span class="fa-li"><i class="fas fa-angle-down"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -180,7 +235,7 @@
             <!-- M1 - Exemplo 02 -->
             <section class="resume-section" id="um_exemplo02">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 02</h2>
+                    <h2 class="mb-0">Exemplo 02</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -215,6 +270,23 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo01">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo03">
+                                    Próximo
+                                    <span class="fa-li"><i class="fas fa-angle-down"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -222,7 +294,7 @@
             <!-- M1 - Exemplo 03 -->
             <section class="resume-section" id="um_exemplo03">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 03</h2>
+                    <h2 class="mb-0">Exemplo 03</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -257,6 +329,23 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo02">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo04">
+                                    Próximo
+                                    <span class="fa-li"><i class="fas fa-angle-down"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -264,7 +353,7 @@
             <!-- M1 - Exemplo 04 -->
             <section class="resume-section" id="um_exemplo04">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 04</h2>
+                    <h2 class="mb-0">Exemplo 04</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -299,6 +388,23 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo03">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#modulo_dois">
+                                    Próximo
+                                    <span class="fa-li"><i class="fas fa-angle-down"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -306,18 +412,29 @@
             <!-- Módulo 2-->
             <section class="resume-section" id="modulo_dois">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Módulo 2</h2>
-                    <div class="subheading mb-3">Exemplos realizados nesse módulo:</div>
+                    <h2 class="mb-3">Módulo 2</h2>
+                    <div class="subheading mb-5">Exemplos realizados nesse módulo:</div>
                     <ul class="fa-ul mb-0">
-                        <li>
+                        <li class="link-example a-link-example">
                             <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <a class="" href="#um_exemplo01">Exemplo 01</a>
+                            <p><a class="a-link-example a-link" href="#dois_exemplo01">Exemplo 01</a></p>
                         </li>
-                        <li>
+                        <li class="link-example a-link-example">
                             <span class="fa-li"><i class="fas fa-code"></i></span>
-                            <a class="" href="#um_exemplo02">Exemplo 02</a>
+                            <p><a class="a-link-example a-link" href="#dois_exemplo02">Exemplo 02</a></p>
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#um_exemplo04">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -325,8 +442,8 @@
             <!-- M2 - Exemplo 01 -->
             <section class="resume-section" id="dois_exemplo01">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 0</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-0">Exemplo 01</h2>
+                    <div class="subheading mb-3">Módulo 2</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -360,14 +477,31 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#modulo_dois">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#dois_exemplo02">
+                                    Próximo
+                                    <span class="fa-li"><i class="fas fa-angle-down"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- M2 - Exemplo 02 -->
             <section class="resume-section" id="dois_exemplo02">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Exemplo 02</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-0">Exemplo 02</h2>
+                    <div class="subheading mb-3">Módulo 2</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -401,6 +535,17 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
+                    <hr>
+                    <div>
+                        <ul class="fa-ul mb-0 list-inline">
+                            <li class="list-inline-item">
+                                <a class="a-link-example a-link" href="#dois_exemplo01">
+                                    <span class="fa-li"><i class="fas fa-angle-up"></i></span>
+                                    Voltar
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
