Adicionando módulo de IoT

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" role="button" href="#modulo_4">Módulo 4 e 5</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" role="button" href="#modulo_iot">Módulo IoT</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -119,7 +122,17 @@
             </section>
             <hr class="m-0" />
 
-            
+            <!-- Módulo 4-->
+            <section class="resume-section" id="modulo_iot">
+                {% include "models/modulo_iot/modulo_iot.html" %}
+            </section>
+            <hr class="m-0" />
+
+            <!-- M4 - Exemplos -->
+            <section class="resume-section" id="ex_iot">
+                {% include "models/modulo_iot/exemplos.html" %}
+            </section>
+            <hr class="m-0" />
         </div>
     </body>
 </html>
