--- a/portifolio/models/modulo_4/exemplos.html
+++ b/portifolio/models/modulo_4/exemplos.html
@@ -122,7 +122,7 @@
                 </a>
             </li>
             <li class="list-inline-item">
-                <a class="a-link-example a-link" href="#um_exemplo02">
+                <a class="a-link-example a-link" href="#iot">
                     Próximo
                     <span class="fa-li"><i class="fas fa-angle-down"></i></span>
                 </a>
